@@ -142,7 +142,7 @@ string TSocketIn::getStatus( )
 
     if( startStat() )
 	rez += TSYS::strMess(_("Connections %d, opened %d. Traffic in %s, out %s. Closed connections by limit %d."),
-	connNumb,cl_id.size(),TTransportS::traf2str(trIn).c_str(),TTransportS::traf2str(trOut).c_str(),clsConnByLim);
+	connNumb,cl_id.size(),TSYS::cpct2str(trIn).c_str(),TSYS::cpct2str(trOut).c_str(),clsConnByLim);
 
     return rez;
 }
@@ -633,7 +633,7 @@ string TSocketOut::getStatus( )
     string rez = TTransportOut::getStatus( );
 
     if(startStat())
-	rez += TSYS::strMess(_("Traffic in %s, out %s."),TTransportS::traf2str(trIn).c_str(),TTransportS::traf2str(trOut).c_str());
+	rez += TSYS::strMess(_("Traffic in %s, out %s."),TSYS::cpct2str(trIn).c_str(),TSYS::cpct2str(trOut).c_str());
 
     return rez;
 }
