@@ -316,14 +316,6 @@ void TTransportS::subStop( )
     TSubSYS::subStop( );
 }
 
-string TTransportS::traf2str( double cnt )
-{
-    if(cnt > 0.2*pow(1024,3))return TSYS::real2str(cnt/pow(1024,3),3,'g')+_("GiB");
-    if(cnt > 0.2*pow(1024,2))return TSYS::real2str(cnt/pow(1024,2),3,'g')+_("MiB");
-    if(cnt > 0.2*1024)	return TSYS::real2str(cnt/1024,3,'g')+_("KiB");
-    return TSYS::real2str(cnt,3,'g')+_("B");
-}
-
 string TTransportS::optDescr( )
 {
     char buf[STR_BUF_LEN];
